src/main/java/com/example/tareaspring/errors/SquadNumberAlreadyTakenException.java
package com.example.tareaspring.errors;

public class SquadNumberAlreadyTakenException extends RuntimeException {

    public SquadNumberAlreadyTakenException(String message) {
        super(message);
    }
}
